feat(screens, repositories, api): Telas conversando com a plataforma, funções e filtros funcionando

--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,8 @@
 </head>
 <body>
   <!--renderização imagem-->
-  <script>window.flutterWebRenderer = "html";</script>
+  <!--<script>window.flutterWebRenderer = "html";</script>-->
   <script src="flutter_bootstrap.js" async></script>
+</script>
 </body>
 </html>
